# patchgym

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_QA_REPORT.md  FINAL_REPORT.md  LICENSE  MANUAL_ACTIONS.md  Makefile  PUBLIC_VERIFICATION.md  QUALITY.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  VALIDITY_PROOF.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  docs.yml  feature_request.yml  task_quality.md
.github/workflows/: ci.yml
docs/: TECHNICAL_ARTICLE.md  agent-adapters.md  architecture.md  benchmark-page.md  comparisons.md  evaluation-metrics.md  hidden-tests.md  how-it-works.md  limitations.md  mining-git-history.md  patchgym-from-scratch.md  reproducible-runs.md  sandboxing.md  task-format.md  walkthrough-90-seconds.md
examples/: replace_agent.py
examples/custom_agent/: agent.sh
launch/: LAUNCH_PLAN.md  devto.md  hacker-news.md  linkedin.md  reddit.md  x-thread.md
scripts/: demo.sh
src/patchgym/: __init__.py  artifacts.py  cli.py  config.py  context_pack.py  demo.py  gitutils.py  graders.py  miner.py  mining.py  models.py  patches.py  report.py  reports.py  runner.py  runners.py  sandbox.py  tasks.py  verify.py  workspace.py
tests/: conftest.py  test_cli.py  test_demo.py  test_mining.py  test_patchgym.py  test_release_workflow.py  test_reports.py  test_run_and_grade.py  test_security_guards.py  test_verification.py
tests/fixtures/: make_tinycalc_repo.py
